# ChangeLog for gnome-base/libgnomekbd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.49 2009/04/26 22:36:49 eva Exp $

  27 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/libgnomekbd-2.22.0-system-relink.patch, libgnomekbd-2.22.0,
  libgnomekbd-2.24.0:
  Avoid re-linking to system's libgnomekbd, thanks to vapier, bug #265428.

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  libgnomekbd-2.24.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.24.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> libgnomekbd-2.24.0.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  libgnomekbd-2.24.0.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libgnomekbd-2.24.0.ebuild:
  Marking libgnomekbd-2.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libgnomekbd-2.24.0.ebuild:
  Marking libgnomekbd-2.24.0 ppc64 stable for bug 260063

*libgnomekbd-2.24.0 (18 Nov 2008)

  18 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libgnomekbd-2.24.0.ebuild:
  New version for GNOME 2.24. Drop libgnomeui dependency, clean up.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> libgnomekbd-2.22.0.ebuild:
  Marking libgnomekbd-2.22.0 ppc64 stable for bug 236971

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> libgnomekbd-2.22.0.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.22.0.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> libgnomekbd-2.22.0.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> libgnomekbd-2.22.0.ebuild:
  Marking libgnomekbd-2.22.0 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> libgnomekbd-2.22.0.ebuild: