@@ -5,6 +5,6 @@ DIST libgnomekbd-2.22.0.tar.bz2 406083 RMD160 23cabca07aaf18325fc6ca6d4daade4b86
 DIST libgnomekbd-2.24.0.tar.bz2 411322 RMD160 8ca98404615c405705fd82c917acb7b4b55b334e SHA1 3e81ade6050930a9d1e3443b89981cf36821032a SHA256 60f093b4fcbdfa12212d6e29dc2f7802a3234d8035f45efed4b426c0bb293c5a
 EBUILD libgnomekbd-2.20.0-r1.ebuild 1127 RMD160 6a2ff23edfe5ff14b42dac0a0170b2215e6f732c SHA1 66d995bdd991bef7b9de7ff19c50b9c1a10ecc99 SHA256 a8432129b072f84102ac75561404aafa8d8f02553038b6ae23b3e439d3db96b7
 EBUILD libgnomekbd-2.22.0.ebuild 1335 RMD160 6c5af9e9050bf769fff4b85bcf044e7e05609ba0 SHA1 bbae6fbac112a516bbfc03863aeb841149ec64eb SHA256 208a7307c8165b4d90b6df9671494966676d67fec89fdc9918952b953777cc48
-EBUILD libgnomekbd-2.24.0.ebuild 1242 RMD160 e21892a6f26cdb27269f99ab8e8bbcf877985830 SHA1 75cfb78b32cb8999d0068371eb56ebe3af2f8e03 SHA256 6e7b48c7074e4abd334d3fe83188172701fc76ad44470de7ed9264edee244a76
-MISC ChangeLog 5971 RMD160 2c75a4726607c57b5dde0a6c644915b5c98bad3e SHA1 9af9c414e03976422dabef0dbaf0f8db827f68cf SHA256 5d1a29501818ac6cd5677e6c2d702776d10748438a822cfd0faf1c73299ce0ee
+EBUILD libgnomekbd-2.24.0.ebuild 1413 RMD160 7392b122f8c0d52bad25684157da0cfe5aad4e73 SHA1 514d947974e0559fd99ddc0e3f7b990a4fd1f702 SHA256 e68027ef81f105d251994dc39b838a04180907cea34e7b8205816d4a4fcbd802
+MISC ChangeLog 6298 RMD160 36f3a0a98b3925c092421d4e8bc159bd40425e57 SHA1 ebd792079d0f15e4f23d567e7c509a9aff62a6b4 SHA256 22e1e5ec16946ef862b5ab40ca5e338ddb43063f71e58e5891fcaeb8b8fddd55
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
