@@ -1,6 +1,16 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.49 2009/04/26 22:36:49 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.52 2009/04/27 19:42:11 eva Exp $
+
+  27 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  libgnomekbd-2.24.0.ebuild:
+  Make it libtool-1 compatible, re fix bug #265428.
+
+  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> libgnomekbd-2.24.0:
+  Stable for HPPA (bug #260063).
+
+  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.24.0.ebuild:
+  arm stable
 
   27 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
   +files/libgnomekbd-2.22.0-system-relink.patch, libgnomekbd-2.22.0,
